--- a/package.json
+++ b/package.json
@@ -3,18 +3,29 @@
   "version": "0.0.1",
   "description": "project for learning webpack setup",
   "author": "geyokoyama",
+  "license": "MIT",
+  "scripts": {
+    "start": "webpack serve --config './build-utils/webpack.config.js' --env env=dev",
+    "build": "webpack --config './build-utils/webpack.config.js' --env env=prod",
+    "dotenv": "touch .env.development && touch .env.production"
+  },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.6",
     "dotenv-webpack": "^7.0.3",
     "html-webpack-plugin": "^5.3.1",
-    "webpack": "^5.39.0",
+    "mini-css-extract-plugin": "^1.6.0",
+    "postcss-loader": "^6.1.0",
+    "postcss-preset-env": "^6.7.0",
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0"
-  },
-  "scripts": {
-    "start": "webpack serve --config build-utils/webpack.config.js --env env=dev",
-    "build": "webpack --config build-utils/webpack.config.js --env env=prod",
-    "env-init": "touch .env.development .env.production"
   }
 }
